--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro">
-  
+
   <link rel="stylesheet" href="css/main.css" />
-  <link rel="stylesheet" href="css/print.css" media="print">
 </head>
 
 <body>
@@ -60,19 +59,35 @@
   </section>
 
   <main>
-    <section class="cards">
-      <div class="card">
 
-        <div class="image">
-          <img src="https://i.ytimg.com/vi/GykTLqODQuU/hqdefault.jpg" />
-        </div>
-        <div class="content">
-          <p class="title text--medium">
-            Formulário Animado com JS puro e CSS Animation | Mayk Brito
-          </p>
-          <div class="info">
-            <p class="text--medium">57 Min</p>
-            <p class="price text--medium">Free</p>
+    <section class="animate-grid">
+
+      <div class="categories">
+        <ul>
+          <li><a href="#" data-filter="*" class="active">Todos</a></li>
+          <li><a href="#" data-filter=".mb">Filtro 01</a></li>
+          <li><a href="#" data-filter=".vga">Filtro 02</a></li>
+          <li><a href="#" data-filter=".lcd">Filtro 03</a></li>
+          <li><a href="#" data-filter=".wir">Filtro 04</a></li>
+        </ul>
+      </div>
+
+
+
+      <div class="cards gallary-thumbs">
+        <div class="card">
+
+          <div class="image">
+            <img src="https://i.ytimg.com/vi/GykTLqODQuU/hqdefault.jpg" />
+          </div>
+          <div class="content">
+            <p class="title text--medium">
+              Formulário Animado com JS puro e CSS Animation | Mayk Brito
+            </p>
+            <div class="info">
+              <p class="text--medium">57 Min</p>
+              <p class="price text--medium">Free</p>
+            </div>
           </div>
         </div>
       </div>
@@ -119,7 +134,7 @@
           </path>
         </svg>
       </a>
-     
+
       <div class="modal-content">
         <div class="video-background">
           <div class="video-foreground">
@@ -127,13 +142,18 @@
           </div>
         </div>
       </div>
-   
+
 
     </div>
   </div>
 
   <script src="js/scripts.js"></script>
   <script src="js/menu.js"></script>
+
+  <script src="js/jquery.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/filter.js"></script>
+  <script src="js/isotope.js"></script>
 </body>
 
 </html>
