--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <header>
     <div class="container">
-      <img src="https://rocketseat.com.br/static/images/gostack/logo-rocketseat.svg" alt="Rocketseat" />
+      <img src="img/logo.png" alt="Rocketseat" />
       <div class="menu-section">
         <div class="menu-toggle">
           <div class="one"></div>
@@ -54,7 +54,7 @@
         </p>
         <a href="#" class="button">Quero embarcar neste foguete!</a>
       </div>
-      <img src="https://rocketseat.com.br/static/images/update/melhores-tecnologias.svg" alt="" />
+      <img src="#" alt="" />
     </div>
   </section>
 
