--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
 
   <section class="hero">
     <div class="container">
-      <div>
         <h2>
           As melhores tecnologias em programação, direto ao ponto e do jeito
           certo.
@@ -55,7 +54,6 @@
         <a href="#" class="button">Quero embarcar neste foguete!</a>
       </div>
       <img src="#" alt="" />
-    </div>
   </section>
 
   <main>
@@ -94,7 +92,7 @@
     </section>
   </main>
 
-  <section id="form">
+  <!-- <section id="form">
     <form action="">
       <h3>Quero Estudar na Rocket!</h3>
       <div class="form-group">
@@ -123,7 +121,7 @@
       </div>
 
     </form>
-  </section>
+  </section> -->
 
   <div class="modal-overlay">
     <div class="modal">
